src/Pages/Upload/Upload.module.scss
@use '../../Constants/colors';

.root {
  height: 100vh;
  width: 100vw;
  background-color: rgba(colors.$base, 0.9);
}

.container {
  padding: 100px;
  margin: 0 auto;
  width: 50%;
  display: flex;
  justify-content: center;
  align-content: center;
  align-items: center;
  flex-direction: column;
}

.title {
  color: colors.$text;
  text-align: center;
}

.uploadInput {
  margin: 10px;
}

[type='file'] {
  border: 0;
  clip: rect(0, 0, 0, 0);
  height: 1px;
  overflow: hidden;
  padding: 0;
  position: absolute !important;
  white-space: nowrap;
  width: 1px;

  + label {
    padding: 2px 5px;
    border: 1px solid colors.$text;
    color: colors.$text;
  }

  &:focus + label,
  + label:hover {
    border: 2px solid colors.$text;
  }

  &:focus + label {
    border: 3px solid colors.$text;
  }
}
.homeBtn {
  width: 100%;
  position: absolute;
  top: 5px;
  left: 5px;
}

.labelContainer {
  width: 100%;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
}

.label {
  color: colors.$text;
}

